Fix footer social icon  paddin-top on small screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,7 +124,11 @@ footer {
 }
 
 @media screen and (max-width: 991px) {
-  .my-extra-small{ font-size: 16px; margin-right: 10px;}
+  .my-extra-small {
+    font-size: 16px;
+    margin-right: 10px;
+  }
+
   .mobile-nav-sticky {
     display: inline-flex;
     position: fixed;
@@ -143,8 +147,13 @@ footer {
   }
 }
 
-@media screen and (max-width: 767px){
-  .my-extra-small{ font-size: 14x; margin-right: 10px;}
-  .my-extra-small-2{ font-size: 11px;}
-  
+@media screen and (max-width: 767px) {
+  .my-extra-small {
+    font-size: 14px;
+    margin-right: 10px;
+  }
+
+  .my-extra-small-2 {
+    font-size: 11px;
+  }
 }
